tests/ui/parser/paamayim-nekudotayim.stderr
error: expected identifier, found `;`
  --> $DIR/paamayim-nekudotayim.rs:4:7
   |
LL |     ::;
   |       ^ expected identifier

error: aborting due to 1 previous error

