tests/ui/parser/paamayim-nekudotayim.rs
// http://phpsadness.com/sad/1

fn main() {
    ::; //~ ERROR expected identifier, found `;`
}
